module1/css/testimonials.css
.testimonials-container {
  max-width: 1120px;
  margin: 0 auto;
  padding: 109px 0 60px 93px;
  font: 400 18px/32px Ubuntu, sans-serif;
  background-color: var(--testimonials-bg);
  border-radius: var(--border-radius);
}

.testimonials__title {
  margin-bottom: 88px;
  color: var(--light-color);
}

.testimonials-list {
  display: flex;
  list-style-type: none;
  gap: 20px;
}

.testimonial {
  width: 100%;
  position: relative;
  flex-shrink: 0;
  overflow: hidden;
  border: 1px solid var(--testimonials-bg);
  max-width: 400px;
  box-shadow: 0 20px 0 0 var(--testimonial-shadow-color);
  background-color: var(--light-color);
  padding: 55px 60px 55px 40px;
  border-radius: 20px;
}

.testimonials-list__testimonial_not-visible::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: linear-gradient(to right, transparent 0%, rgba(255, 255, 255, 1) 90%);
}

.testimonials-list__testimonial_first {
  box-shadow: 0 20px 0 0 var(--first-testimonial-shadow-color);
  padding: 60px 70px 50px 70px;
  max-width: 645px;
}

.testimonial__img {
  width: 90px;
  height: 90px;
  object-fit: cover;
  border-radius: 50%;
}

.testimonial__description {
  margin-left: 30px;
}

.testimonial__title {
  margin-top: 10px;
}

.testimonial__text {
  margin-top: 20px;
}

.testimonial-container {
  display: flex;
}

.testimonials-container__pagination {
  margin: 60px 70px 0 0;
}

.pagination-container {
  display: flex;
  justify-content: space-between;
}

.bullet-pagination {
  display: flex;
  list-style-type: none;
  align-items: center;
  gap: 10px;
}

.bullet-pagination__item {
  width: 5px;
  height: 5px;
  cursor: pointer;
  border-radius: 50%;
  transition: width 0.3s ease-in, height 0.3s ease-in, background-color 0.3s ease-in;
  background-color: var(--light-color);
}

.bullet-pagination__item:hover {
  width: 10px;
  height: 10px;
  background-color: var(--bullet-active-bg);
}

.bullet-pagination__item_active {
  width: 10px;
  height: 10px;
  background-color: var(--bullet-active-bg);
}

.arrows-pagination {
  display: flex;
  gap: 20px;
}

.arrows-pagination__arrow-container {
  padding-top: 7px;
  cursor: pointer;
  height: 14px;
}

.arrows-pagination__arrow {
  display: block;
  cursor: pointer;
  height: 2px;
  position: relative;
  background-color: var(--light-color);
}

.arrows-pagination__arrow_left {
  width: 40px;
}

.arrows-pagination__arrow:before {
  position: absolute;
  content: '';
  left: 0;
  top: -7px;
  width: 2px;
  height: 10px;
  background-color: var(--light-color);
  transform: rotate(40deg);
}

.arrows-pagination__arrow:after {
  position: absolute;
  content: '';
  left: 0;
  width: 2px;
  height: 10px;
  background-color: var(--light-color);
  transform: rotate(-40deg);
}

.arrows-pagination__arrow_right {
  width: 20px;
  opacity: 0.5;
}

.arrows-pagination__arrow_right:before {
  left: auto;
  right: 0;
  transform: rotate(-40deg);
}

.arrows-pagination__arrow_right:after {
  left: auto;
  right: 0;
  transform: rotate(40deg);
}

@media screen and (max-width: 1024px) {
  .testimonials-container {
    padding: 30px;
  }
}

@media screen and (max-width: 768px) {
  .testimonial-container {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .testimonials-list-container {
    overflow: hidden;
  }
  .testimonial {
    padding: 20px;
  }
}

